--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,7 +1,6 @@
 .home-page {
   display: flex;
   flex-direction: column;
-  gap: 4rem;
 }
 
 /* Hero Section */
